# TrackTracks

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt  tox.ini
tracktracks/: __main__.py
tracktracks/frontend/: model.py  qr_conversion.py
tracktracks/frontend/tasks/: generate_qr_codes.py
tracktracks/main/: generate_qr_codes.py
