[tool.poetry]
name = "tracktracks"
version = "0.1.0"
description = "Scan visual cues and translate them into rail tracks"
authors = ["BobMcFry"]
license = "GNU General Public License Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qreader = "^3.12"
opencv-python = "^4.8.1.78"
qrcode = "^7.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
