[project]
name = "tracktracks"
version = "0.2.0"
description = "Scan visual cues and translate them into rail tracks"
authors = ["BobMcFry"]
license = "GNU General Public License Version 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0.84",
    "qrcode>=8.0",
    "qreader>=3.14",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.8",
]
