[project]
name = "tracktracks"
version = "0.2.0"
description = "Scan visual cues and translate them into rail tracks"
authors = [
    {name = "BobMcFry", email = ""}
]
license = "GNU General Public License Version 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0.84",
    "qrcode>=8.0",
    "qreader>=3.14",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C90",  # McCabe
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ERA",  # Eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
